<resources>
    <string name="app_name" translatable="false">Kitsune</string>
    <string name="github_repo_url" translatable="false">https://github.com/Drumber/Kitsune</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_feed">Feed</string>
    <string name="nav_library">Library</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_settings">Settings</string>
    <string name="notifications_title">Notifications</string>
    <string name="action_notifications">Notifications</string>
    <string name="notifications_login_required">Log in to see your notifications.</string>
    <string name="notification_followed">%1$s started following you</string>
    <string name="notification_liked_post">%1$s liked your post</string>
    <string name="notification_commented">%1$s commented on your post</string>
    <string name="notification_replied">%1$s replied to your comment</string>
    <string name="notification_liked_comment">%1$s liked your comment</string>
    <string name="notification_liked_reaction">%1$s liked your reaction</string>
    <string name="notification_mentioned">%1$s mentioned you</string>
    <string name="notification_posted">%1$s made a new post</string>
    <string name="notification_aired">%1$s posted an update</string>
    <string name="notification_generic">%1$s sent you a notification</string>
    <string name="nav_appearance">Appearance</string>
    <string name="nav_app_logs">Application Logs</string>
    <string name="nav_os_libraries">Open Source Libraries</string>
    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="feed_tab_global">Global</string>
    <string name="feed_tab_following">Following</string>
    <string name="feed_login_required">Log in to see posts from people you follow.</string>
    <string name="feed_pinned_post">Pinned</string>
    <string name="feed_spoiler_warning_title">Spoiler</string>
    <string name="feed_nsfw_warning_title">NSFW content</string>
    <string name="feed_content_warning_tap_to_view">Tap to view</string>
    <string name="feed_image_count_more" translatable="false">+%1$d</string>
    <string name="feed_likers_more" translatable="false">+%1$d</string>
    <string name="feed_image_indicator" translatable="false">%1$d / %2$d</string>
    <string name="feed_unknown_user">Unknown user</string>
    <string name="feed_post_spoiled_episode">Ep. %1$d</string>
    <string name="feed_post_spoiled_chapter">Ch. %1$d</string>
    <string name="feed_post_media_unit_separator" translatable="false">%1$s — %2$s</string>
    <string name="feed_post_unit_with_title" translatable="false">%1$s · %2$s</string>
    <string name="cd_like_post">Like post, %1$d likes</string>
    <string name="cd_unlike_post">Unlike post, %1$d likes</string>
    <string name="cd_comments_count">%1$d comments</string>
    <string name="action_retry">Retry</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_reset_filter">Reset filter</string>
    <string name="action_unselect_all">Unselect all</string>
    <string name="action_read_more">Read more</string>
    <string name="action_read_less">Read less</string>
    <string name="action_show_more">Show more</string>
    <string name="action_show_less">Show less</string>
    <string name="action_view">View</string>
    <string name="action_back">Back</string>
    <string name="action_skip">Skip</string>
    <string name="action_next">Next</string>
    <string name="action_continue">Continue</string>
    <string name="action_close">Close</string>
    <string name="action_log_out">Log out</string>
    <string name="action_share_profile_url">Share Profile</string>
    <string name="action_share">Share</string>
    <string name="action_open_external">Open on an external site</string>
    <string name="action_open_external_short">External sites</string>
    <string name="action_share_app_logs">Share Logs</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_synchronize">Synchronize</string>
    <string name="action_save_in_gallery">Save in Gallery</string>
    <string name="action_open_in_browser">Open in Browser</string>
    <string name="action_db_request">Request DB change</string>
    <string name="db_request_anime">Request anime DB change</string>
    <string name="db_request_open_anime">View open anime requests</string>
    <string name="db_request_manga">Request manga DB change</string>
    <string name="db_request_open_manga">View open manga requests</string>
    <string name="action_copy_url">Copy URL</string>
    <string name="action_open_on_mal">Open on MyAnimeList.net</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_update_profile">Update Profile</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>
    <string name="action_update">Update</string>
    <string name="action_start">Start</string>
    <string name="action_allow">Allow</string>
    <string name="action_rate">Rate</string>
    <string name="action_update_rating">Update Rating</string>
    <string name="action_remove_rating">Remove Rating</string>
    <string name="action_add_profile_link">Add Profile Link</string>
    <string name="action_edit_profile_link">Edit Profile Link</string>
    <string name="action_select_profile_link_site">Select a Site</string>
    <string name="action_delete_profile_link">Delete Profile Link</string>
    <string name="hint_search">Search</string>
    <string name="hint_search_characters">Search characters</string>
    <string name="hint_mark_watched">Mark as watched.</string>
    <string name="hint_mark_not_watched">Mark as not watched.</string>
    <string name="hint_rating">Rating</string>
    <string name="dialog_log_out_confirmation">Are you sure you want to log out?</string>
    <string name="dialog_remove_from_library_title">Remove from Library?</string>
    <string name="dialog_remove_from_library_msg">&lt;b&gt;%s&lt;/b&gt; will be removed from your library.</string>
    <string name="dialog_notification_permission_rejected_title">Permission rejected</string>
    <string name="dialog_notification_permission_rejected">You won\'t get notifications and won\'t be informed about app updates.</string>
    <string name="dialog_request_notification_permission_title">Allow notifications</string>
    <string name="dialog_request_notification_permission">Allow push notifications to get notified when a new app version is released.</string>
    <string name="error_resource_loading">Could not load data.</string>
    <string name="error_image_loading">Failed to load image.</string>
    <string name="error_mapping_loading">Failed to load mappings for external sites.</string>
    <string name="error_nothing_found">Nothing found.</string>
    <string name="error_invalid_user">Invalid User. Are you logged in?</string>
    <string name="error_user_update_failed">Failed to update user data.</string>
    <string name="error_user_delete_waifu_failed">Failed to delete Waifu/Husbando.</string>
    <string name="error_user_update_image_failed">Failed to update profile image or cover.</string>
    <string name="error_user_create_profile_link_failed">Failed to create profile link for %s.</string>
    <string name="error_user_update_profile_link_failed">Failed to update profile link for %s.</string>
    <string name="error_user_delete_profile_link_failed">Failed to delete profile link for %s.</string>
    <string name="error_something_wrong">Oops, something went wrong!</string>
    <string name="error_requires_external_storage_permission">Require permission to write to external storage.</string>
    <string name="error_search_provider_unavailable">Search Provider unavailable.</string>
    <string name="error_library_update_failed">Failed to update library entry.</string>
    <string name="error_library_update_failed_multiple">Failed to update %d library entries.</string>
    <string name="error_library_update_not_found">The library entry does not exist.</string>
    <string name="error_library_add_failed">Failed to add to your library.</string>
    <string name="error_library_delete_failed">Failed to delete library entry.</string>
    <string name="error_requires_notification_permission">Notification permission is required.</string>
    <string name="sort_popularity_asc">Least Popular</string>
    <string name="sort_popularity_desc">Most Popular</string>
    <string name="sort_average_rating_asc">Worst Rated</string>
    <string name="sort_average_rating_desc">Best Rated</string>
    <string name="sort_release_date_asc">Oldest</string>
    <string name="sort_release_date_desc">Latest</string>
    <string name="title_media_type">Media Type</string>
    <string name="title_character_appearances">Character Appearances</string>
    <string name="title_categories">Categories</string>
    <string name="title_filter">Filter</string>
    <string name="title_description">Description</string>
    <string name="title_details">Details</string>
    <string name="title_streamer">Streaming Links</string>
    <string name="title_ratings">Ratings</string>
    <string name="title_more_franchise">More from this Series</string>
    <string name="title_favorite_anime">Favorite Anime</string>
    <string name="title_favorite_manga">Favorite Manga</string>
    <string name="title_favorite_characters">Favorite Characters</string>
    <string name="title_authentication">Authentication</string>
    <string name="title_login">Log in to your Kitsu account</string>
    <string name="title_play_trailer">Play Trailer</string>
    <string name="title_about_me">About Me</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_chapters">Chapters</string>
    <string name="title_characters">Characters</string>
    <string name="title_posts">Posts</string>
    <string name="title_reactions">Reactions</string>
    <string name="title_reaction">Reaction</string>
    <string name="reactions_upvote_login_required">Log in to upvote reactions.</string>
    <string name="reactions_upvote_failed">Failed to upvote reaction.</string>
    <string name="action_add_reaction">Add reaction</string>
    <string name="reaction_compose_title">Write a reaction</string>
    <string name="reaction_compose_edit_title">Edit reaction</string>
    <string name="reaction_compose_hint">Share your reaction…</string>
    <string name="reaction_compose_action_post">Post</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="profile_data_gender">Gender</string>
    <string name="profile_data_location">Location</string>
    <string name="profile_data_birthday">Birthday</string>
    <string name="profile_gender_custom_hint">Define your gender</string>
    <string name="profile_waifu_or_husbando">Waifu or Husbando</string>
    <string name="profile_find_waifu">Find your special someone</string>
    <string name="profile_data_bio">Bio</string>
    <string name="profile_cover_image_description">Cover image</string>
    <string name="profile_avatar_image_description">Profile picture</string>
    <string name="profile_link_url">URL or Username</string>
    <string name="report_post_title">Report Post</string>
    <string name="report_reason">Reason</string>
    <string name="report_explanation_hint">Please explain</string>
    <string name="report_submit">Submit</string>
    <string name="report_already_reported">You have already reported this.</string>
</resources>