<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isCreatingNew"
            type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{isCreatingNew ? @string/action_add_profile_link : @string/action_edit_profile_link}"
                style="@style/Widget.Kitsune.TextView.BottomSheetTitle"
                tools:text="@string/action_edit_profile_link" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tooltipText="@string/action_delete_profile_link"
                app:icon="@drawable/ic_delete_24"
                app:isVisible="@{!isCreatingNew}"
                style="@style/Widget.Material3.Button.IconButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                tools:src="@drawable/ic_github"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/tv_site_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="GitHub" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_link_url">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_cancel"
                style="?attr/buttonBarNeutralButtonStyle" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{isCreatingNew ? @string/action_add : @string/action_update}"
                style="?attr/buttonBarPositiveButtonStyle"
                tools:text="@string/action_update" />

        </LinearLayout>

    </LinearLayout>
</layout>