<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp"
    android:gravity="center">

    <ImageView
        android:id="@+id/iv_state_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@null"
        android:visibility="gone"
        app:tint="?attr/colorOnSurfaceVariant"
        tools:src="@drawable/ic_inbox_24"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:text="@string/error_resource_loading"/>

    <TextView
        android:id="@+id/tv_no_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:visibility="gone"
        android:text="@string/error_nothing_found" />

    <com.google.android.material.loadingindicator.LoadingIndicator
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        app:icon="@drawable/ic_refresh_24"
        android:text="@string/action_retry"
        style="?attr/materialButtonTonalStyle" />

</LinearLayout>